# VRBattery

./: .gitmodules  CMakeLists.txt  README.md  appveyor.yml
Application/: Application.pro  CMakeLists.txt  batteryinfowidget.cpp  batteryinfowidget.h  batteryinfowidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openvroverlaycontroller.cpp  openvroverlaycontroller.h
cmake/: WinDeployQt.cmake
