cmake_minimum_required(VERSION 3.1.0)
project(VRBattery)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY lib/static)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")

add_subdirectory(openvr)
add_subdirectory(Application)

set(CPACK_GENERATOR "ZIP")
set(CPACK_PACKAGE_VERSION $ENV{APPVEYOR_BUILD_VERSION})
INCLUDE(CPack)
